[package]
name = "reflexio"
version = "0.1.0"
edition = "2021"
authors = ["Luís Rodrigues Soares <luis@luis.rs>"]
description = "A minimal rust implementation of echo, from coreutils"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"